# rp2040-freertos

./: CMakeLists.txt
include/: FreeRTOSConfig.h
src/: main.c
